--- a/docs/backend.yaml
+++ b/docs/backend.yaml
@@ -36,12 +36,12 @@ paths:
         content:
           application/json:
             schema:
-              type: object
+              type: "object"
               properties:
                 email:
-                  type: string
+                  type: "string"
                 password:
-                  type: string
+                  type: "string"
       responses:
         "201":
           description: "Log-in Successfully"
@@ -71,10 +71,10 @@ paths:
       tags:
         - "Bookings"
       parameters:
-        - in: query
-          name: hotelId
+        - in: "query"
+          name: "hotelId"
           schema:
-            type: string
+            type: "string"
           required: false
           description: "The hotel id (Optional)"
       responses:
@@ -83,7 +83,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
+                type: "array"
                 items:
                   $ref: "#/components/schemas/Booking"
   /hotels/{hotelId}/bookings:
@@ -94,10 +94,10 @@ paths:
       tags:
         - "Bookings"
       parameters:
-        - in: path
-          name: hotelId
+        - in: "path"
+          name: "hotelId"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The hotel id"
       requestBody:
@@ -123,10 +123,10 @@ paths:
       tags:
         - "Bookings"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The booking id"
       responses:
@@ -145,10 +145,10 @@ paths:
       tags:
         - "Bookings"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The booking id"
       requestBody:
@@ -173,10 +173,10 @@ paths:
       tags:
         - "Bookings"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The booking id"
       responses:
@@ -207,9 +207,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Hotel"
-        "500":
-          description: "Some server error"
+                $ref: "#/components/schemas/CreateHotel201Response"
+        "400":
+          description: "Bad request or validation error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest400Response"
     get:
       summary: "Returns the list of all the hotels"
       tags:
@@ -220,19 +224,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Hotel"
+                $ref: "#/components/schemas/GetHotels200Response"
   /hotels/{id}:
     get:
       summary: "Get the hotel by id"
       tags:
         - "Hotels"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The hotel id"
       responses:
@@ -241,9 +243,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Hotel"
+                $ref: "#/components/schemas/GetHotelById200Response"
         "404":
-          description: "The hotel was not found"
+          description: "Hotel not found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotFound404Response"
     put:
       security:
         - bearerAuth: []
@@ -251,10 +257,10 @@ paths:
       tags:
         - "Hotels"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The hotel id"
       requestBody:
@@ -279,10 +285,10 @@ paths:
       tags:
         - "Hotels"
       parameters:
-        - in: path
-          name: id
+        - in: "path"
+          name: "id"
           schema:
-            type: string
+            type: "string"
           required: true
           description: "The hotel id"
       responses:
@@ -297,7 +303,7 @@ paths:
 components:
   schemas:
     User:
-      type: object
+      type: "object"
       required:
         - "name"
         - "email"
@@ -305,27 +311,27 @@ components:
         - "password"
       properties:
         name:
-          type: string
+          type: "string"
           description: "Name of user"
         email:
-          type: string
+          type: "string"
           description: "Email of user"
         tel:
-          type: string
+          type: "string"
           description: "Telephone number of user"
         role:
-          type: string
+          type: "string"
           description: "Role of user (admin or user), default is user"
         password:
-          type: string
+          type: "string"
           description: "Password of user"
         createdAt:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
           description: "Date of creation (default is current date-time)"
     Booking:
-      type: object
+      type: "object"
       required:
         - "bookingDate"
         - "checkoutDate"
@@ -333,28 +339,28 @@ components:
         - "hotel"
       properties:
         bookingDate:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
           description: "Check-In Date"
         checkoutDate:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
-          description: "Check-Out Date"
+          description: "Check-In Date"
         user:
-          type: string
+          type: "string"
           description: "ID of the user making reservation"
         hotel:
-          type: string
+          type: "string"
           description: "ID of the hotel being reserved"
         createdAt:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
           description: "Date of creation (default is current date-time)"
     Hotel:
-      type: object
+      type: "object"
       required:
         - "name"
         - "address"
@@ -364,52 +370,114 @@ components:
         - "picture"
       properties:
         name:
-          type: string
+          type: "string"
           description: "Name of the hotel"
         address:
-          type: string
+          type: "string"
           description: "House No., Street, Road"
         district:
-          type: string
+          type: "string"
           description: "District"
         province:
-          type: string
+          type: "string"
           description: "Province"
         postalcode:
-          type: string
+          type: "string"
           description: "5-digit postal code"
         tel:
-          type: string
+          type: "string"
           description: "Telephone number"
         picture:
-          type: string
+          type: "string"
           description: "Picture"
+    GetHotels200Response:
+      type: "object"
+      required:
+        - "success"
+        - "count"
+        - "pagination"
+        - "data"
+      properties:
+        success:
+          type: "boolean"
+          example: true
+        count:
+          type: "integer"
+        pagination:
+          type: "integer"
+        data:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/Hotel"
+    GetHotelById200Response:
+      type: "object"
+      required:
+        - success
+        - data
+      properties:
+        success:
+          type: "boolean"
+          example: true
+        data:
+          $ref: "#/components/schemas/Hotel"
+    CreateHotel201Response:
+      type: "object"
+      required:
+        - success
+        - data
+      properties:
+        success:
+          type: "boolean"
+          example: true
+        data:
+          $ref: "#/components/schemas/Hotel"
+
+    BadRequest400Response:
+      type: "object"
+      required:
+        - success
+        - message
+      properties:
+        success:
+          type: "boolean"
+          example: false
+        message:
+          type: "string"
+          example: "Error message describing the issue"
     BookingBody:
-      type: object
+      type: "object"
       required:
         - "bookingDate"
         - "checkoutDate"
       properties:
         bookingDate:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
           description: "Check-In Date"
         checkoutDate:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
-          description: "Check-Out Date"
+          description: "Check-In Date"
         createdAt:
-          type: string
-          format: date
+          type: "string"
+          format: "date"
           example: "2023-08-20"
           description: "Date of creation (default is current date-time)"
+    NotFound404Response:
+      type: "object"
+      required:
+        - success
+      properties:
+        success:
+          type: "boolean"
+          example: false
   securitySchemes:
     bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+      type: "http"
+      scheme: "bearer"
+      bearerFormat: "JWT"
 tags:
   - name: "User"
     description: "The user API"
