--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-client": "openapi-generator-cli generate -i docs/backend.json --generator-name typescript-fetch -o src/api/gen"
+    "generate-client": "openapi-generator-cli generate -i docs/backend.yaml --generator-name typescript-fetch -o src/api/gen",
+    "generate-fixed-client": "openapi-generator-cli generate -i docs/backend_fixed.yaml --generator-name typescript-fetch -o src/api/gen"
   },
   "dependencies": {
     "react": "^18",
