--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "generate-fixed-client": "openapi-generator-cli generate -i docs/backend_fixed.yaml --generator-name typescript-fetch -o src/api/gen"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@mui/styled-engine-sc": "^6.1.1",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
