--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
+    "cookies-next": "^5.0.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
