--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "generate-client": "openapi-generator-cli generate -i docs/backend.yaml --generator-name typescript-fetch -o src/api/gen",
+    "generate-client": "openapi-generator-cli generate -i docs/openapi.yml --generator-name typescript-fetch -o src/api/gen",
     "generate-fixed-client": "openapi-generator-cli generate -i docs/backend_fixed.yaml --generator-name typescript-fetch -o src/api/gen"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
     "cookies-next": "^5.0.2",
+    "dotenv": "^16.4.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
