--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "cookies-next": "^5.0.2",
     "dotenv": "^16.4.5",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13"
   },
